# SdlGui

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/: gui.fra.glsl  gui.ver.glsl
src/gui/: borderlayout.h  button.cpp  button.h  checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  component.cpp  component.h  dimension.h  flowlayout.h  frame.cpp  frame.h  graphic.cpp  graphic.h  gridlayout.h  guishader.cpp  guishader.h  guishaderfunctions.cpp  guishaderfunctions.h  guivertexdata.h  horizontallayout.h  inputformatter.h  label.cpp  label.h  layoutmanager.h  panel.cpp  panel.h  popupmenu.cpp  popupmenu.h  progressbar.cpp  progressbar.h  textfield.cpp  textfield.h  traversalgroup.cpp  traversalgroup.h  verticallayout.h  windowmatrix.h
srcTest/: main.cpp
